--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "next": "^16.0.7",
     "papaparse": "^5.5.3",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
@@ -65,7 +65,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.7"
   }
